# CI-CD-Diagnosis-using-LLM

./: .env.template  .gitignore  Dockerfile  Makefile  README.md  create_strcuture.sh  docker-compose.yml  high_level_overview.md  project.md  pyproject.toml  requirements.txt  run_workflow.sh  setup.py  test.py
.github/workflows/: ci.yml
automated_scripts/: annotate.py  benchmark_models.py  data_collection.py  diagnose_logs.py  evaluate_demo.py  pipeline_manifest.py  triage.py
configs/: api_config.yaml  evaluation_config.yaml  rag_config.yaml
data/annotated_logs/: diagnosed_batch1.json
data/evaluation/: ground_truth.json
docs/: RUNNING.md  architecture.puml  email_rq_draft.md  executive_summary.md  meeting_notes_20260311.md  meeting_notes_20260330.md  next_steps_march2026.md  progress_30_march_2026.md  project_overview.md  proof_of_work.md  research_questions_draft.md  supervisor_response_march2026.md
scripts/: data_collection.py  diagnose_logs.py
src/: config.py  log_setup.py
src/api/: __init__.py  filtering.py  grounding.py  llm_service.py  main.py  models.py
src/data_collection/: data_collection.py
src/evaluation/: evaluation.py
src/human_study/: human_study.py
src/rag/: rag_system.py
tests/: test_api.py  test_smoke.py  test_statistical.py
